--- a/resources/sass/inc/_print.scss
+++ b/resources/sass/inc/_print.scss
@@ -1,11 +1,7 @@
-.recto, .verso {
-	background: none;
-}
-
 .recto {
 	transform: rotate(180deg);
+	background: none;
 }
-
 
 .property-details {
 	display: none;
@@ -19,20 +15,19 @@
 }
 
 .grid-container {
-		grid-template-columns: repeat(auto-fill, minmax(#{map-get($card, width) * 1px}, 1fr));
+ 	grid-template-columns: repeat(auto-fill, minmax(#{map-get($card, width) * 1px}, 1fr));
 }
 
 .card-container {
 	display: block;
+	margin-bottom: 50pt;
 	&:nth-child(3n+0) {
 		page-break-after: always;
 	}
 }
 
-.frame {
-    h2 {
-    	color-adjust: exact !important;
-    }
+.verso {
+	margin-top: 20pt
 }
 
 .decorated-container {
