--- a/resources/sass/inc/_fonts.scss
+++ b/resources/sass/inc/_fonts.scss
@@ -1,2 +1,5 @@
 $headingFont: 'Della Respira', serif;
-$textFont: 'Almendra', serif;
+//$textFont: 'Almendra', serif;
+//$textFont: 'Sorts Mill Goudy', serif;
+//$valueFont: 'Amiri', serif;
+$textFont: $headingFont;
