--- a/resources/sass/cards.scss
+++ b/resources/sass/cards.scss
@@ -1,6 +1,5 @@
 @import 'inc/bootstrap';
 @import 'inc/normalize';
-@import 'inc/header';
 
 
 // this is for preview convenience only
@@ -50,22 +49,8 @@ $colorIndex: 0;
 	width: 100%;
 	height: 100%;
     text-shadow: 0 0 30px rgba(0,0,0,1);
-    align-items: flex-end;
     display: flex;
     justify-content: center;
-    h2 {
-		margin-bottom: 20px;
-    	font: bold 1.9rem $headingFont;
-		color: getColor($colorIndex, detail-text) !important;
-		padding: 5px 20px;
-		background-image: url(../img/bg.png);
-		border: {
-			width: 1px;
-			color: getColor($colorIndex, border);
-			style: solid;
-			radius: 20px;
-		}
-	}
 	& > img {
 		position: absolute;
 		top: 0;
@@ -74,24 +59,19 @@ $colorIndex: 0;
 	}
 }
 
+h2 {
+	padding: 0;
+	margin: 0;
+	position: relative;
+	&.badge-top {
+		margin-top: 5px
+	}
+	&.badge-bottom {
+		top: -5px;
+	}
+}
+
 .recto {
-	// image as bg:
-	// - needs to be enabled in printer dialog
-	// - white parts cannot be transparent
-
-	//.frame {
-	//	background: {
-	//		position: center;
-	//		size: cover;
-	//		repeat: no-repeat;
-	//	}
-	//}
-
-	// image as dom element:
-	// - white parts can be transparent with mix-blend-mode
-	// - everything else becomes a bit yellow-ish with a structure
-	// - might be difficult when image not wide enough
-
 	display: flex;
 	align-items: center;
 	.antlitz-outer {
@@ -105,28 +85,22 @@ $colorIndex: 0;
 		min-height: 100%;
 		mix-blend-mode: multiply;
 	}
+	.frame {
+		align-items: flex-end;
+	}
 }
 
 .verso {
 	position: relative;
-	.badge {
+	.badge-cr {
 		z-index: 2;
 		display: inline-block;
 		position: absolute;
-		right: 5px;
-		bottom: 5px;
-		border: {
-			style: solid;
-			width: 1px;
-			color: getColor($colorIndex, border);
-			radius: 50%;
-		}
-		text-align: center;
-		background: rgba(getColor($colorIndex, detail-bg), .8);
-		color: getColor($colorIndex, detail-text);
-		padding: 2px 10px;
-		font: bold 1.8rem $headingFont;
-		text-shadow: 1px 1px 0 rgba(255,255,255,0.2);
+		right: 6px;
+		bottom: 6px;
+	}
+	.frame {
+		align-items: flex-start;
 	}
 }
 
@@ -137,33 +111,35 @@ $colorIndex: 0;
 
 .card-properties {
 	width: 100%;
-	th, td {
+	margin-top: 20px;
+	td {
 		text-align: left;
 		vertical-align: top;
-		padding: 2px 6px;
+		padding: 3px 6px;
 		font-size: 1.3rem;
 		&.value {
 			white-space: nowrap;
 			color: getColor($colorIndex, text);
 			font-weight: bold;
-		}
-	}
-	thead {
-		th {
-			text-align: center;
-			padding-bottom: 10px;
-			border-bottom: 1px solid getColor($colorIndex, border);
-			font-size: 1.8rem;
-			font-weight: bold;
+			.value-part {
+				&:before {
+					content: '|';
+					display: inline-block;
+					color: #999;
+					height: 10px;
+					width: 1px;
+					padding: 0 10px 0 3px;
+				}
+				&:first-of-type{
+					&::before {
+						content: normal;
+					}
+				}
+			}
 		}
 	}
 	tbody {
 		tr {
-			&:first-of-type {
-				td {
-					padding-top: 10px;
-				}
-			}
 			&:last-of-type {
 				td {
 					padding-top: 10px;
@@ -180,6 +156,21 @@ $colorIndex: 0;
 }
 
 
+[class^="badge-"], [class*=" badge-"] {
+	border: {
+		style: ridge;
+		width: 3px;
+		color: getColor($colorIndex, border);
+		radius: 10% 20%;
+	}
+	text-align: center;
+	background: getColor($colorIndex, detail-bg);
+	color: getColor($colorIndex, detail-text);
+	padding: 2px 10px;
+	font: bold 1.8rem $headingFont;
+	text-shadow: 1px 1px 0 rgba(255,255,255,0.2);
+	display: inline-block;
+}
 
 .property-details {
 	left: -100000px;
@@ -192,15 +183,6 @@ $colorIndex: 0;
 	padding: 8px;
 	table {
 		width: 100%;
-		tbody {
-			tr {
-				&:first-of-type {
-					td {
-						padding-top: 0;
-					}
-				}
-			}
-		}
 	}
 }
 
@@ -223,20 +205,11 @@ $colorIndex: 0;
 			border-color: getColor($key, border);
 		}
 		.frame {
-			h2 {
-				color: getColor($key, text) !important;
-				border-color: getColor($key, border);
-			}
 			& > img {
 				filter: hue-rotate(getColor($key, hue) * 1deg);
 			}
 		}
 		.card-properties {
-			thead {
-				th {
-					border-bottom-color: getColor($key, border);
-				}
-			}
 			tbody {
 				tr {
 					&.pre-ultimate {
@@ -257,12 +230,10 @@ $colorIndex: 0;
 				border-bottom-color: getColor($key, border);
 			}
 		}
-		.verso {
-			.badge {
-				border-color: getColor($key, border);
-				background-color: rgba(getColor($key, detail-bg), .8);
-				color: getColor($key, detail-text);
-			}
+		[class^="badge-"], [class*=" badge-"] {
+			border-color: getColor($key, border, true);
+			background-color: getColor($key, detail-bg);
+			color: getColor($key, detail-text);
 		}
 	}
 }
