--- a/public/css/cards.css
+++ b/public/css/cards.css
@@ -79,6 +79,8 @@ td,
 th {
   padding: 0; }
 
+body.print body {
+  max-width: 297mm; }
 body.print .recto {
   transform: rotate(180deg); }
 body.print .property-details {
@@ -88,21 +90,34 @@ body.print .detail-trigger {
   body.print .detail-trigger .detail-text {
     border: none; }
 body.print .grid-container {
-  grid-template-columns: repeat(auto-fill, minmax(264px, 1fr));
-  transform: scale(0.8); }
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  transform: scale(0.8);
+  transform-origin: top left; }
 body.print .card-container {
   display: block;
   margin-bottom: 50pt; }
   body.print .card-container:nth-child(3n+0) {
     page-break-after: always; }
 body.print .verso {
-  margin-top: 6px; }
+  margin-top: 10px;
+  overflow: visible; }
+  body.print .verso::before {
+    content: ' ';
+    display: block;
+    height: 10px;
+    position: absolute;
+    top: -11px;
+    left: -1px;
+    width: calc(100% + 2px);
+    border-top: 1px #999 solid;
+    border-bottom: 1px #999 solid;
+    background-image: url(../img/frame.png); }
 body.print .decorated-container {
   box-shadow: none; }
 
 .decorated-container {
   border-width: 1px;
-  border-color: #174a69;
+  border-color: #186b5b;
   border-style: solid;
   border-radius: 2px;
   box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, 0.2); }
@@ -145,9 +160,9 @@ h2 {
   margin: 0;
   position: relative; }
   h2.badge-top {
-    margin-top: 5px; }
+    margin-top: 28px; }
   h2.badge-bottom {
-    top: -5px; }
+    top: -6px; }
 
 .recto {
   display: flex;
@@ -171,7 +186,8 @@ h2 {
     display: inline-block;
     position: absolute;
     right: 6px;
-    bottom: 6px; }
+    bottom: 6px;
+    border-radius: 50%; }
   .verso .frame {
     align-items: flex-start; }
 
@@ -180,7 +196,7 @@ h2 {
 
 .card-properties {
   width: 100%;
-  margin-top: 20px; }
+  margin-top: 40px; }
   .card-properties td {
     text-align: left;
     vertical-align: top;
@@ -188,7 +204,7 @@ h2 {
     font-size: 1.3rem; }
     .card-properties td.value {
       white-space: nowrap;
-      color: #174a69;
+      color: #186b5b;
       font-weight: bold; }
       .card-properties td.value .value-part:before {
         content: '|';
@@ -203,25 +219,26 @@ h2 {
     padding-top: 10px; }
   .card-properties tbody tr.pre-ultimate td {
     padding-bottom: 10px;
-    border-bottom: 1px solid #174a69; }
+    border-bottom: 1px solid #186b5b; }
 
 [class^="badge-"], [class*=" badge-"] {
   border-style: ridge;
   border-width: 3px;
-  border-color: #174a69;
+  border-color: #186b5b;
   border-radius: 10% 20%;
   text-align: center;
-  background: #8ba5b4;
-  color: black;
+  background: #8cb5ad;
+  color: #186b5b;
   padding: 2px 10px;
   font: bold 1.8rem "Della Respira", serif;
   text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.2);
-  display: inline-block; }
+  display: inline-block;
+  box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, 0.2); }
 
 .property-details {
   left: -100000px;
-  background: rgba(139, 165, 180, 0.8);
-  color: black;
+  background: #8cb5ad;
+  color: #186b5b;
   position: absolute;
   bottom: 0;
   margin: 30px;
@@ -233,193 +250,253 @@ h2 {
 .detail-trigger {
   cursor: pointer; }
   .detail-trigger .detail-text {
-    border-bottom: 1px dashed #174a69; }
+    border-bottom: 1px dashed #186b5b; }
   .detail-trigger:hover .property-details {
     left: 0; }
 
 .color-0 .decorated-container {
-  border-color: #174a69; }
+  border-color: #186b5b; }
 .color-0 .frame > img {
   filter: hue-rotate(0deg); }
 .color-0 .card-properties tbody tr.pre-ultimate td {
-  border-bottom: 1px solid #174a69; }
+  border-bottom: 1px solid #186b5b; }
 .color-0 .property-details {
-  background-color: rgba(139, 165, 180, 0.8);
-  color: black; }
+  background-color: #8cb5ad;
+  color: #186b5b; }
 .color-0 .detail-trigger .detail-text {
-  border-bottom-color: #174a69; }
+  border-bottom-color: #186b5b; }
 .color-0 [class^="badge-"], .color-0 [class*=" badge-"] {
-  background-color: #8ba5b4;
-  color: black; }
+  border-color: #186b5b;
+  background-color: #8cb5ad;
+  color: #186b5b; }
+.color-0 .verso::before {
+  background-color: #186b5b;
+  filter: hue-rotate(0deg);
+  border-color: #186b5b; }
 
 .color-1 .decorated-container {
-  border-color: #162864; }
+  border-color: #174a69; }
 .color-1 .frame > img {
   filter: hue-rotate(30deg); }
 .color-1 .card-properties tbody tr.pre-ultimate td {
-  border-bottom: 1px solid #162864; }
+  border-bottom: 1px solid #174a69; }
 .color-1 .property-details {
-  background-color: rgba(139, 148, 178, 0.8);
-  color: black; }
+  background-color: #8ba5b4;
+  color: #174a69; }
 .color-1 .detail-trigger .detail-text {
-  border-bottom-color: #162864; }
+  border-bottom-color: #174a69; }
 .color-1 [class^="badge-"], .color-1 [class*=" badge-"] {
-  background-color: #8b94b2;
-  color: black; }
+  border-color: #174a69;
+  background-color: #8ba5b4;
+  color: #174a69; }
+.color-1 .verso::before {
+  background-color: #174a69;
+  filter: hue-rotate(30deg);
+  border-color: #174a69; }
 
 .color-2 .decorated-container {
-  border-color: #331661; }
+  border-color: #162864; }
 .color-2 .frame > img {
   filter: hue-rotate(60deg); }
 .color-2 .card-properties tbody tr.pre-ultimate td {
-  border-bottom: 1px solid #331661; }
+  border-bottom: 1px solid #162864; }
 .color-2 .property-details {
-  background-color: rgba(153, 139, 176, 0.8);
-  color: black; }
+  background-color: #8b94b2;
+  color: #162864; }
 .color-2 .detail-trigger .detail-text {
-  border-bottom-color: #331661; }
+  border-bottom-color: #162864; }
 .color-2 [class^="badge-"], .color-2 [class*=" badge-"] {
-  background-color: #998bb0;
-  color: black; }
+  border-color: #162864;
+  background-color: #8b94b2;
+  color: #162864; }
+.color-2 .verso::before {
+  background-color: #162864;
+  filter: hue-rotate(60deg);
+  border-color: #162864; }
 
 .color-3 .decorated-container {
-  border-color: #6a185f; }
+  border-color: #331661; }
 .color-3 .frame > img {
   filter: hue-rotate(90deg); }
 .color-3 .card-properties tbody tr.pre-ultimate td {
-  border-bottom: 1px solid #6a185f; }
+  border-bottom: 1px solid #331661; }
 .color-3 .property-details {
-  background-color: rgba(181, 140, 175, 0.8);
-  color: black; }
+  background-color: #998bb0;
+  color: #331661; }
 .color-3 .detail-trigger .detail-text {
-  border-bottom-color: #6a185f; }
+  border-bottom-color: #331661; }
 .color-3 [class^="badge-"], .color-3 [class*=" badge-"] {
-  background-color: #b58caf;
-  color: black; }
+  border-color: #331661;
+  background-color: #998bb0;
+  color: #331661; }
+.color-3 .verso::before {
+  background-color: #331661;
+  filter: hue-rotate(90deg);
+  border-color: #331661; }
 
 .color-4 .decorated-container {
-  border-color: #7f1c2f; }
+  border-color: #6a185f; }
 .color-4 .frame > img {
   filter: hue-rotate(120deg); }
 .color-4 .card-properties tbody tr.pre-ultimate td {
-  border-bottom: 1px solid #7f1c2f; }
+  border-bottom: 1px solid #6a185f; }
 .color-4 .property-details {
-  background-color: rgba(191, 142, 151, 0.8);
-  color: black; }
+  background-color: #b58caf;
+  color: #6a185f; }
 .color-4 .detail-trigger .detail-text {
-  border-bottom-color: #7f1c2f; }
+  border-bottom-color: #6a185f; }
 .color-4 [class^="badge-"], .color-4 [class*=" badge-"] {
-  background-color: #bf8e97;
-  color: black; }
+  border-color: #6a185f;
+  background-color: #b58caf;
+  color: #6a185f; }
+.color-4 .verso::before {
+  background-color: #6a185f;
+  filter: hue-rotate(120deg);
+  border-color: #6a185f; }
 
 .color-5 .decorated-container {
-  border-color: #863a1e; }
+  border-color: #7f1c2f; }
 .color-5 .frame > img {
   filter: hue-rotate(150deg); }
 .color-5 .card-properties tbody tr.pre-ultimate td {
-  border-bottom: 1px solid #863a1e; }
+  border-bottom: 1px solid #7f1c2f; }
 .color-5 .property-details {
-  background-color: rgba(195, 157, 143, 0.8);
-  color: black; }
+  background-color: #bf8e97;
+  color: #7f1c2f; }
 .color-5 .detail-trigger .detail-text {
-  border-bottom-color: #863a1e; }
+  border-bottom-color: #7f1c2f; }
 .color-5 [class^="badge-"], .color-5 [class*=" badge-"] {
-  background-color: #c39d8f;
-  color: black; }
+  border-color: #7f1c2f;
+  background-color: #bf8e97;
+  color: #7f1c2f; }
+.color-5 .verso::before {
+  background-color: #7f1c2f;
+  filter: hue-rotate(150deg);
+  border-color: #7f1c2f; }
 
 .color-6 .decorated-container {
-  border-color: #86531e; }
+  border-color: #863a1e; }
 .color-6 .frame > img {
   filter: hue-rotate(180deg); }
 .color-6 .card-properties tbody tr.pre-ultimate td {
-  border-bottom: 1px solid #86531e; }
+  border-bottom: 1px solid #863a1e; }
 .color-6 .property-details {
-  background-color: rgba(195, 169, 143, 0.8);
-  color: black; }
+  background-color: #c39d8f;
+  color: #863a1e; }
 .color-6 .detail-trigger .detail-text {
-  border-bottom-color: #86531e; }
+  border-bottom-color: #863a1e; }
 .color-6 [class^="badge-"], .color-6 [class*=" badge-"] {
-  background-color: #c3a98f;
-  color: black; }
+  border-color: #863a1e;
+  background-color: #c39d8f;
+  color: #863a1e; }
+.color-6 .verso::before {
+  background-color: #863a1e;
+  filter: hue-rotate(180deg);
+  border-color: #863a1e; }
 
 .color-7 .decorated-container {
-  border-color: #86691e; }
+  border-color: #86531e; }
 .color-7 .frame > img {
   filter: hue-rotate(210deg); }
 .color-7 .card-properties tbody tr.pre-ultimate td {
-  border-bottom: 1px solid #86691e; }
+  border-bottom: 1px solid #86531e; }
 .color-7 .property-details {
-  background-color: rgba(195, 180, 143, 0.8);
-  color: black; }
+  background-color: #c3a98f;
+  color: #86531e; }
 .color-7 .detail-trigger .detail-text {
-  border-bottom-color: #86691e; }
+  border-bottom-color: #86531e; }
 .color-7 [class^="badge-"], .color-7 [class*=" badge-"] {
-  background-color: #c3b48f;
-  color: black; }
+  border-color: #86531e;
+  background-color: #c3a98f;
+  color: #86531e; }
+.color-7 .verso::before {
+  background-color: #86531e;
+  filter: hue-rotate(210deg);
+  border-color: #86531e; }
 
 .color-8 .decorated-container {
-  border-color: #867f1e; }
+  border-color: #86691e; }
 .color-8 .frame > img {
   filter: hue-rotate(240deg); }
 .color-8 .card-properties tbody tr.pre-ultimate td {
-  border-bottom: 1px solid #867f1e; }
+  border-bottom: 1px solid #86691e; }
 .color-8 .property-details {
-  background-color: rgba(195, 191, 143, 0.8);
-  color: black; }
+  background-color: #c3b48f;
+  color: #86691e; }
 .color-8 .detail-trigger .detail-text {
-  border-bottom-color: #867f1e; }
+  border-bottom-color: #86691e; }
 .color-8 [class^="badge-"], .color-8 [class*=" badge-"] {
-  background-color: #c3bf8f;
-  color: black; }
+  border-color: #86691e;
+  background-color: #c3b48f;
+  color: #86691e; }
+.color-8 .verso::before {
+  background-color: #86691e;
+  filter: hue-rotate(240deg);
+  border-color: #86691e; }
 
 .color-9 .decorated-container {
-  border-color: #63761a; }
+  border-color: #867f1e; }
 .color-9 .frame > img {
   filter: hue-rotate(270deg); }
 .color-9 .card-properties tbody tr.pre-ultimate td {
-  border-bottom: 1px solid #63761a; }
+  border-bottom: 1px solid #867f1e; }
 .color-9 .property-details {
-  background-color: rgba(177, 187, 141, 0.8);
-  color: black; }
+  background-color: #c3bf8f;
+  color: #867f1e; }
 .color-9 .detail-trigger .detail-text {
-  border-bottom-color: #63761a; }
+  border-bottom-color: #867f1e; }
 .color-9 [class^="badge-"], .color-9 [class*=" badge-"] {
-  background-color: #b1bb8d;
-  color: black; }
+  border-color: #867f1e;
+  background-color: #c3bf8f;
+  color: #867f1e; }
+.color-9 .verso::before {
+  background-color: #867f1e;
+  filter: hue-rotate(270deg);
+  border-color: #867f1e; }
 
 .color-10 .decorated-container {
-  border-color: #2d6817; }
+  border-color: #63761a; }
 .color-10 .frame > img {
   filter: hue-rotate(300deg); }
 .color-10 .card-properties tbody tr.pre-ultimate td {
-  border-bottom: 1px solid #2d6817; }
+  border-bottom: 1px solid #63761a; }
 .color-10 .property-details {
-  background-color: rgba(150, 180, 139, 0.8);
-  color: black; }
+  background-color: #b1bb8d;
+  color: #63761a; }
 .color-10 .detail-trigger .detail-text {
-  border-bottom-color: #2d6817; }
+  border-bottom-color: #63761a; }
 .color-10 [class^="badge-"], .color-10 [class*=" badge-"] {
-  background-color: #96b48b;
-  color: black; }
+  border-color: #63761a;
+  background-color: #b1bb8d;
+  color: #63761a; }
+.color-10 .verso::before {
+  background-color: #63761a;
+  filter: hue-rotate(300deg);
+  border-color: #63761a; }
 
 .color-11 .decorated-container {
-  border-color: #186b5b; }
+  border-color: #2d6817; }
 .color-11 .frame > img {
   filter: hue-rotate(330deg); }
 .color-11 .card-properties tbody tr.pre-ultimate td {
-  border-bottom: 1px solid #186b5b; }
+  border-bottom: 1px solid #2d6817; }
 .color-11 .property-details {
-  background-color: rgba(140, 181, 173, 0.8);
-  color: black; }
+  background-color: #96b48b;
+  color: #2d6817; }
 .color-11 .detail-trigger .detail-text {
-  border-bottom-color: #186b5b; }
+  border-bottom-color: #2d6817; }
 .color-11 [class^="badge-"], .color-11 [class*=" badge-"] {
-  background-color: #8cb5ad;
-  color: black; }
+  border-color: #2d6817;
+  background-color: #96b48b;
+  color: #2d6817; }
+.color-11 .verso::before {
+  background-color: #2d6817;
+  filter: hue-rotate(330deg);
+  border-color: #2d6817; }
 
 @media print {
-  header {
-    display: none; }
+  body {
+    max-width: 297mm; }
 
   .recto {
     transform: rotate(180deg); }
@@ -433,8 +510,9 @@ h2 {
       border: none; }
 
   .grid-container {
-    grid-template-columns: repeat(auto-fill, minmax(264px, 1fr));
-    transform: scale(0.8); }
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    transform: scale(0.8);
+    transform-origin: top left; }
 
   .card-container {
     display: block;
@@ -443,7 +521,19 @@ h2 {
       page-break-after: always; }
 
   .verso {
-    margin-top: 6px; }
+    margin-top: 10px;
+    overflow: visible; }
+    .verso::before {
+      content: ' ';
+      display: block;
+      height: 10px;
+      position: absolute;
+      top: -11px;
+      left: -1px;
+      width: calc(100% + 2px);
+      border-top: 1px #999 solid;
+      border-bottom: 1px #999 solid;
+      background-image: url(../img/frame.png); }
 
   .decorated-container {
     box-shadow: none; } }
