--- a/resources/sass/inc/_print.scss
+++ b/resources/sass/inc/_print.scss
@@ -1,3 +1,7 @@
+body {
+    max-width: 297mm;
+}
+
 .recto {
 	transform: rotate(180deg);
 }
@@ -14,8 +18,9 @@
 }
 
 .grid-container {
- 	grid-template-columns: repeat(auto-fill, minmax(#{map-get($card, width) * 1px}, 1fr));
-	transform: scale(.8);
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    transform: scale(.8);
+    transform-origin: top left;
 }
 
 .card-container {
@@ -27,9 +32,22 @@
 }
 
 .verso {
-	margin-top: 6px;
+    margin-top: 10px;
+    overflow: visible;
+	&::before {
+	    content: ' ';
+	    display: block;
+	    height: 10px;
+        position: absolute;
+        top: -11px;
+        left: -1px;
+        width: calc(100% + 2px);
+        border-top: 1px #999 solid;
+        border-bottom: 1px #999 solid;
+        background-image: url(../img/frame.png);
+	}
 }
 
 .decorated-container {
-	box-shadow: none;	
+	box-shadow: none;
 }
