--- a/resources/sass/inc/_print.scss
+++ b/resources/sass/inc/_print.scss
@@ -1,3 +1,9 @@
+@import 'inc/bootstrap';
+
+@page {
+	size: landscape;
+}
+
 body {
     max-width: 297mm;
 }
@@ -18,36 +24,41 @@ body {
 }
 
 .grid-container {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    transform: scale(.8);
+    $scale: .8;
+    transform: scale($scale);
     transform-origin: top left;
+    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
 }
 
 .card-container {
 	display: block;
-	margin-bottom: 50pt;
-	&:nth-child(3n+0) {
-		page-break-after: always;
-	}
 }
 
 .verso {
     margin-top: 10px;
     overflow: visible;
 	&::before {
-	    content: ' ';
+	    content: '';
 	    display: block;
+		width: 100%;
 	    height: 10px;
         position: absolute;
-        top: -11px;
-        left: -1px;
-        width: calc(100% + 2px);
+        top: -10px;
         border-top: 1px #999 solid;
         border-bottom: 1px #999 solid;
         background-image: url(../img/frame.png);
+		box-sizing: border-box;
 	}
 }
 
-.decorated-container {
-	box-shadow: none;
+// color specific classes
+@each $index, $rgb in $palette {
+	.color-#{$index} {
+		.verso {
+			&::before {
+				filter: hue-rotate(getHueRotation($index));
+				border-color: getColor($index, border);
+			}
+		}
+	}
 }
